<resources>
    <string name="app_name">Trip Planner</string>
    <string name="add_word">Add new word</string>
    <string name="sample_city">New Jersey</string>
    <string name="sample_continent">North America</string>
    <string name="sample_country">USA</string>
    <string name="empty_not_saved">ERROR! Fill the field in!</string>
    <string name="hint_city">City</string>
    <string name="hint_continent">Continent</string>
    <string name="hint_country">Country</string>
    <string name="button_save">Save</string>
    <string name="no_trips">There are no trips available</string>
    <string name="hint_image">ImageURL</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_API_key" translatable="false">AIzaSyC1wKyOOX4NOivSXEXTtUtyc4zEvVqs-_M</string>
</resources>