<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_continent"
        style="@style/add_trip"
        android:hint="@string/hint_continent"
        app:layout_constraintBottom_toTopOf="@+id/add_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_city"
        android:autofillHints="" />

    <EditText
        android:id="@+id/add_city"
        style="@style/add_trip"
        android:hint="@string/hint_city"
        app:layout_constraintBottom_toTopOf="@+id/add_continent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""/>


    <EditText
        android:id="@+id/add_country"
        style="@style/add_trip"
        android:hint="@string/hint_country"
        app:layout_constraintBottom_toTopOf="@+id/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_continent"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/add_image"
        style="@style/add_trip"
        android:hint="@string/hint_image"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_country"
        android:autofillHints=""/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>